--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
       "eslint Intercom --ext .tsx --ext .ts && eslint playground --ext .tsx --ext .ts",
     "lint:tslint":
       "tslint -c tslint.json --project tsconfig.json 'Intercom/**/*.ts' 'Intercom/**/*.tsx' --exclude 'Intercom/**/*.d.ts' && tslint -c tslint.json --project tsconfig.json 'playground/**/*.ts' 'playground/**/*.tsx' --exclude 'playground/**/*.d.ts'",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test": "jest --silent",
+    "test:debug": "jest",
+    "test:coverage": "yarn test --coverage",
     "test:coveralls":
-      "jest --coverage --coverageReporters=text-lcov | coveralls",
+      "yarn test --coverage --coverageReporters=text-lcov | coveralls",
     "ci": "yarn lint && yarn test",
     "build": "webpack",
     "clean": "rm -rf build",
@@ -68,6 +69,7 @@
     "prettier": "^1.12.1",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
+    "ts-jest": "^22.4.6",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
     "typed-css-modules": "^0.3.1",
@@ -75,8 +77,7 @@
     "typescript-eslint-parser": "^15.0.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3",
-    "ts-jest": "^22.4.6"
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "lodash-decorators": "^5.0.1",
