--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "lib": ["dom", "es2015", "es2016", "es2017"],
     "moduleResolution": "node",
     "rootDir": ".",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "outDir": "build",
+    "declaration": true
   },
   "exclude": ["node_modules"]
 }
