--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "outDir": "build",
     "declaration": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "playground", "build"]
 }
