--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "coveralls": "^3.0.1",
     "lodash-decorators": "^5.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
