--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
       "yarn test --coverage --coverageReporters=text-lcov | coveralls",
     "ci": "yarn lint && yarn test:coveralls && yarn test",
     "build": "tsc",
-    "clean": "rm -rf build",
-    "prepublish": "yarn clean && yarn build"
+    "clean": "rm -rf build"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.9",
