--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,16 @@
     "jsx": "react",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "target": "es2016",
-    "lib": ["dom", "es2015", "es2016", "es2017"],
+    "target": "es2015",
+    "module": "ES2015",
     "moduleResolution": "node",
     "rootDir": ".",
     "baseUrl": ".",
-    "outDir": "build",
-    "declaration": true
+    "lib": ["dom", "es2015", "es2016", "es2017"],
+    "declaration": true,
+    "declarationDir": "./build",
+    "outDir": "./build"
   },
+  "include": ["./Intercom/**/*"],
   "exclude": ["node_modules", "playground", "build"]
 }
