fixes circle commands

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "lint:tslint":
       "tslint -c tslint.json --project tsconfig.json 'Intercom/**/*.ts' 'Intercom/**/*.tsx' --exclude 'Intercom/**/*.d.ts' && tslint -c tslint.json --project tsconfig.json 'playground/**/*.ts' 'playground/**/*.tsx' --exclude 'playground/**/*.d.ts'",
     "test": "jest --silent",
-    "test:ci": "yarn test && yarn test:bundlesize && yarn test:coveralls",
-    "test:bundlesize": "bundlesize",
+    "test:ci": "yarn lint && yarn test",
+    "test:bundle": "bundlesize",
     "test:debug": "jest",
     "test:coverage": "yarn test --coverage",
     "test:coveralls":
