--- a/package.json
+++ b/package.json
@@ -6,29 +6,39 @@
     "type": "git",
     "url": "https://github.com/kvendrik/intercom-react.git"
   },
-  "keywords": ["intercom", "react", "live", "chat", "support"],
-  "main": "build/Intercom/index.js",
+  "keywords": [
+    "intercom",
+    "react",
+    "live",
+    "chat",
+    "support"
+  ],
+  "main": "build/index.js",
+  "module": "build/index.es.js",
   "types": "build/Intercom/index.d.ts",
   "author": "Koen Vendrik <k.vendrik@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "playground":
-      "webpack-dev-server --hot --inline --config ./playground/webpack.config.js",
+    "playground": "webpack-dev-server --hot --inline --config ./playground/webpack.config.js",
     "lint": "yarn lint:ts && yarn lint:tslint && yarn lint:eslint",
     "lint:ts": "tsc --noEmit",
-    "lint:eslint":
-      "eslint Intercom --ext .tsx --ext .ts && eslint playground --ext .tsx --ext .ts",
-    "lint:tslint":
-      "tslint -c tslint.json --project tsconfig.json 'Intercom/**/*.ts' 'Intercom/**/*.tsx' --exclude 'Intercom/**/*.d.ts' && tslint -c tslint.json --project tsconfig.json 'playground/**/*.ts' 'playground/**/*.tsx' --exclude 'playground/**/*.d.ts'",
+    "lint:eslint": "eslint Intercom --ext .tsx --ext .ts && eslint playground --ext .tsx --ext .ts",
+    "lint:tslint": "tslint -c tslint.json --project tsconfig.json 'Intercom/**/*.ts' 'Intercom/**/*.tsx' --exclude 'Intercom/**/*.d.ts' && tslint -c tslint.json --project tsconfig.json 'playground/**/*.ts' 'playground/**/*.tsx' --exclude 'playground/**/*.d.ts'",
     "test": "jest --silent",
+    "test:bundle": "yarn build && bundlesize",
     "test:debug": "jest",
     "test:coverage": "yarn test --coverage",
-    "test:coveralls":
-      "yarn test --coverage --coverageReporters=text-lcov | coveralls",
-    "ci": "yarn lint && yarn test:coveralls && yarn test",
-    "build": "tsc",
+    "test:coveralls": "yarn test --coverage --coverageReporters=text-lcov | coveralls",
+    "test:ci": "yarn lint && yarn test && yarn test:coveralls && yarn test:bundle",
+    "build": "rollup -c",
     "clean": "rm -rf build"
   },
+  "bundlesize": [
+    {
+      "path": "build/index.js",
+      "maxSize": "3 kB"
+    }
+  ],
   "devDependencies": {
     "@types/enzyme": "^3.1.9",
     "@types/jest": "^22.2.3",
@@ -46,6 +56,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bundlesize": "^0.17.0",
+    "coveralls": "^3.0.1",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -61,10 +73,13 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.4",
     "postcss-loader": "^2.1.4",
     "precss": "^3.1.2",
     "prettier": "^1.12.1",
+    "rollup": "^0.66.6",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-typescript2": "^0.17.2",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "ts-jest": "^22.4.6",
@@ -77,7 +92,6 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "coveralls": "^3.0.1",
     "lodash-decorators": "^5.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
