--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,8 @@
     "baseUrl": ".",
     "lib": ["dom", "es2015", "es2016", "es2017"],
     "declaration": true,
-    "declarationDir": "./build",
     "outDir": "./build"
   },
-  "include": ["./Intercom/**/*"],
+  "include": ["./src/**/*"],
   "exclude": ["node_modules", "playground", "build"]
 }
