--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   ],
   "devDependencies": {
     "@shopify/enzyme-utilities": "^1.1.4",
+    "@shopify/javascript-utilities": "^2.3.0",
     "@types/enzyme": "^3.1.9",
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.11",
