--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intercom-react",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-alpha.1",
   "description": "An Intercom component for React.",
   "repository": {
     "type": "git",
